2007-09-16 [colin]	3.0.0cvs14

	* src/folderview.c
	* src/main.c
	* src/mainwindow.c
		Fix bug 1308, 'Claws deletes folderlist.xml after
		fetching mail short after start-up'

2007-09-16 [colin]	3.0.0cvs13

	* src/compose.c
		Fix scrolling to cursor

2007-09-16 [paul]	3.0.0cvs12

	* po/sr.po
		updated by Aleksandar Urosevic

2007-09-16 [paul]	3.0.0cvs11

	* src/folder.c
		do not allow locked msgs to be deleted,
		even by filtering/processing

2007-09-07 [paul]	3.0.0cvs10

	* src/prefs_folder_column.c
	* src/prefs_summary_column.c
		implement button sensitivity
		patch by Pawel Pekala

2007-09-06 [wwp]	3.0.0cvs9

	* src/prefs_gtk.c
		Add a missing linefeed to a debug message.

2007-09-05 [colin]	3.0.0cvs8

	* src/inc.c
		Fix statusbar/window mismatch on Maemo

2007-09-05 [colin]	3.0.0cvs7

	* src/ldaputil.c
		Fix build without USE_LDAP_TLS

2007-09-05 [colin]	3.0.0cvs6

	* src/folder.c
	* src/imap.c
	* src/inc.c
	* src/mbox.c
	* src/send_message.c
	* src/statusbar.c
	* src/statusbar.h
		Maemo: distinguish various statusbar messages,
		in order to display only the most important.

2007-09-04 [wwp]	3.0.0cvs5

	* src/account.c
		Accounts list: fix "Local" protocol not shown when USE_OPENSSL is set.
		Show protocol "SMTP" and the appropriate server for send-only
		accounts, show "-" instead of "" when no value is relevant.

2007-09-03 [ticho]	3.0.0cvs4

	* src/summaryview.c
		Handle plural form better in delete confirmation dialog.

2007-09-03 [wwp]	3.0.0cvs3

	* src/compose.c
		Warn differently when sending or sending later (queueing).

2007-09-03 [colin]	3.0.0cvs2

	* src/procmime.c
	* src/procmime.h
	* src/common/plugin.c
	* src/common/plugin.h
		Add a new plugin API, MimeParser. It allows
		plugins to scan email MIME parts and optionally,
		transform them.

2007-09-03 [mones]	3.0.0cvs1

	* po/es.po
		Updated translation
	* src/common/defs.h
		While a better solution is made double history sizes

2007-09-03 [paul]	3.0.0

	* NEWS
	* README
	* RELEASE_NOTES