@@ -2860,3 +2860,4 @@
 ( cvs diff -u -r 1.17.2.27 -r 1.17.2.28 po/sr.po;  ) > 3.0.0cvs12.patchset
 ( cvs diff -u -r 1.382.2.407 -r 1.382.2.408 src/compose.c;  ) > 3.0.0cvs13.patchset
 ( cvs diff -u -r 1.207.2.181 -r 1.207.2.182 src/folderview.c;  cvs diff -u -r 1.115.2.166 -r 1.115.2.167 src/main.c;  cvs diff -u -r 1.274.2.210 -r 1.274.2.211 src/mainwindow.c;  ) > 3.0.0cvs14.patchset
+( cvs diff -u -r 1.59.2.57 -r 1.59.2.58 src/prefs_filtering.c;  cvs diff -u -r 1.6.2.7 -r 1.6.2.8 src/prefs_filtering.h;  cvs diff -u -r 1.1.4.39 -r 1.1.4.40 src/prefs_filtering_action.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/common/tags.c;  ) > 3.0.0cvs15.patchset
